Pending build-225

Fri Mar 11 21:41:28 2022 adamy

	* #16 - Completion

		o Support unix and windows directory separator.
		o CDPATH delimiter.

Wed Mar  9 21:50:55 2022 adamy

	* Console alert mode (#17 - Console alert options, audible and/or visible indicator).

		o Configuration, under <Display Bits>

			- Visible indicators <Invisible, Flash window or Flash baseline> [default = Invisible].
			- Audible <on/off> [default = on].

				+-------------------- Display bits -------------------+
				| Input / display codepage:   [ UTF-8 ]               |
				|-----------------------------------------------------|
				|  Console alert mode          Other Options          |
				|  ( ) Invisible               [x] Full 8 bits input  |
				|  ( ) Flash window                                   |
				|  (*) Flash baseline                                 |
				|  [ ] Audible                                        |
				|  [ ] Legacy beep                                    |
				|-----------------------------------------------------|
				|                 [< OK >] [ Cancel ]                 |
				+-----------------------------------------------------+

		o "console_alert_mode", configuration element (save/restore).
		o Supporting slang extensions.
		o Utilise windows "SystemAsterisk".

Sun Mar  6 21:19:10 2022 adamy

	* Build-224

	* #16 - access directory expansion and other special keys.

		o <Esc-Tab>, mapped to <alt-tab>
		o <Esc-1..9,0>. mapped tp <F1> ... <F10>

Tue Mar  1 19:29:46 2022 adamy

	* busybox

		o bundled busybox-w32-FRP-4621-gf3c5e8bc3.exe (https://frippery.org/busybox)

	* #14 - <ctrl-space> key mapping.

	* 4.8.27 merge

		o mc_popen() script support.
		o mc_pread() pipe rework.
		o compat strtok_r() and inet_ntop().
		o slang: SLsmg_set_color_in_region().
		o command quoting; white-space handling.
		o reduced beep freq/duration.

	* aspell enabled (https://github.com/adamyg/aspell-win32)
