@@ -1,7 +1,3 @@
-Sat Mar  5 17:41:51 2022 adamy
-
-	* fish support
-
 Tue Jun  9 13:22:00 2020 adamy
 
 	* Mirror MC configuration during builds, example
