@@ -8,6 +8,7 @@ the current 4.8.x development stream.
 
         Version         Latest Build
 
+        4.8.27          226 (#21 - FISH enabled), requires "OpenSSH for Windows" to be enabled/installed.
         4.8.27          225 (enhancements #16 and #17).
         4.8.27          224 (mc merge, libaspell - beta) See [https://github.com/adamyg/aspell-win32] for distributions.
 
